# calendar-automation

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: calendar_view.py  schedule_planner.py
test/: test_schedule_planner.py
